[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nanoquant"
version = "0.1.0"
description = "W4A16 quantization + Triton GEMV kernel for Nemotron-Nano-9B-v2 SSM decode"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",
    "triton>=3.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
eval  = ["lm-eval[math,ifeval]>=0.4.0", "openai>=1.0.0"]
dev   = ["pytest>=8.0", "pytest-xdist"]

[project.scripts]
nanoquant-convert = "convert:main"
nanoquant-serve   = "serve.serve:main"
nanoquant-bench   = "bench.bench_throughput:main"
nanoquant-eval    = "eval.run_benchmarks:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanoquant*", "serve*", "bench*", "eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers   = ["slow: marks tests as slow (deselect with -m 'not slow')"]
